import { render, fireEvent, waitFor } from '@testing-library/react';
import '@testing-library/jest-dom';
import {within} from '@testing-library/dom';

import AddModelGroupModal from './AddModelGroupModal';
import { Provider } from "react-redux";
import { createTestStore } from '../../../../../../store/store';
import modelsResponse from "../../../../../../services/API/testing/models-response.json";
import axios from 'axios';
import { fetchModels } from '../../../../../../services/API/apiSlice';
jest.mock('axios');

const TEST_MODEL_NAME = "CCMI-1_ACCESS_ACCESS-CCM-refC2";

let store;
describe('test addModelGroupModal rendering', () => {
    beforeEach(() => {
        store = createTestStore();
    });

    it('renders without crashing', () => {
        render(<Provider store={store}>
            <AddModelGroupModal isOpen={true} onClose={() => {}} reportError={() => {}} />
        </Provider>);
    });

    
    it('renders correctly when open', () => {
        let { baseElement, container } = render(<Provider store={store}>
            <AddModelGroupModal isOpen={true} onClose={() => {}} reportError={() => {}} />
        </Provider>
        );
        expect(baseElement).toMatchSnapshot();
        expect(container).toBeVisible();
    });

    it('renders correctly when closed', () => {
        let { container, baseElement } = render(<Provider store={store}>
            <AddModelGroupModal isOpen={false} onClose={() => {}} reportError={() => {}} />
        </Provider>
        );
        expect(baseElement).toMatchSnapshot();
        expect(container).not.toBeVisible;
    });

    it('fires props.onClose when clicking on the closing icon button', () => {
        const onClose = jest.fn();
        const { getByTestId, container } = render(<Provider store={store}>
            <AddModelGroupModal isOpen={true} onClose={onClose} reportError={() => {}} />
        </Provider>
        );
        const closeButton = getByTestId(/close-button/);
        fireEvent.click(closeButton);
        expect(onClose).toHaveBeenCalled();
        expect(container).not.toBeVisible;
    });

    it('raises a console.error function if a required prop is not provided', () => {
        console.error = jest.fn();
        render(<Provider store={store}>
            <AddModelGroupModal />
        </Provider>);
        expect(console.error).toHaveBeenCalled();
        render(<Provider store={store}>
            <AddModelGroupModal isOpen={false} reportError={() => {}} />
        </Provider>);
        expect(console.error).toHaveBeenCalled();
        render(<Provider store={store}>
            <AddModelGroupModal onClose={() => {}} />
        </Provider>
        );
        expect(console.error).toHaveBeenCalled();
    });

    it("renders correctly if model list provided", () => {

        const { baseElement } = render(<Provider store={store}>
            <AddModelGroupModal isOpen={true} onClose={() => {}} reportError={() => {}}/>
        </Provider>);

        expect(baseElement).toMatchSnapshot();
    });
});

describe('test addModelGroupModal functionality', () => {

    beforeEach(() => {
        store = createTestStore();
    });


    it('disables move all checked buttons if nothing is checked at beginning', () => {
        const { getByTestId } = render(<Provider store={store}>
            <AddModelGroupModal isOpen={true} onClose={() => {}} reportError={() => {}} />
        </Provider>
        );
        const moveAllRightButton = getByTestId(/move-allChecked-left/);
        expect(moveAllRightButton).toBeDisabled;
        const moveAllLeftButton = getByTestId(/move-allChecked-right/);
        expect(moveAllLeftButton).toBeDisabled;
    });

    it("displays spinner when models are being fetched", () => {
        const { getAllByTestId } = render(<Provider store={store}>
            <AddModelGroupModal isOpen={true} onClose={() => {}} reportError={() => {}} />
        </Provider>);
        const circularProgress = getAllByTestId(/AddModelGroupModal-spinner/);
        expect(circularProgress.length).toBe(2);
    });

    it("calls props.reportError if fetching models failed", async () => {
        const errorMessage = "blob";
        const mock = jest.fn();
        axios.get.mockImplementation(() => {
            return Promise.reject({message: errorMessage}); //Promise.resolve({data: modelsResponse})
        });
        
        const { rerender } = render(<Provider store={store}>
            <AddModelGroupModal isOpen={true} onClose={() => {}} reportError={mock} />
        </Provider>);

        await store.dispatch(fetchModels());
        rerender(<Provider store={store}>
            <AddModelGroupModal isOpen={true} onClose={() => {}} reportError={mock} />
        </Provider>)
        expect(mock).toHaveBeenCalledWith(`API not responding: ${errorMessage}`);
    });

    it("loads all 105 models correctly", async () => {
        axios.get.mockImplementation(() => {
            return Promise.resolve({data: modelsResponse}); //Promise.resolve({data: modelsResponse})
        });
        
        const { baseElement, getAllByRole } = render(<Provider store={store}>
            <AddModelGroupModal isOpen={true} onClose={() => {}} reportError={() => {}} />
        </Provider>);

        await store.dispatch(fetchModels());
        await waitFor(() => {
            expect(baseElement).toHaveTextContent("105");
        });
        expect(getAllByRole("listitem").length).toEqual(105);
    });
        
    it("check if models are rendered on the left", async () => {
        axios.get.mockImplementation(() => {
            return Promise.resolve({data: modelsResponse}); //Promise.resolve({data: modelsResponse})
        });
        
        const { baseElement, getByTestId } = render(<Provider store={store}>
            <AddModelGroupModal isOpen={true} onClose={() => {}} reportError={() => {}} />
        </Provider>);

        await store.dispatch(fetchModels());
        await waitFor(() => {
            expect(baseElement).toHaveTextContent("105");
        });
        expect(within(getByTestId("AddModelGroupModal-card-header-left")).getAllByRole("listitem").length).toEqual(105);
        expect(within(getByTestId("AddModelGroupModal-card-header-right")).queryAllByRole("listitem").length).toEqual(0);
    });

    test.todo("check if models can be moved from left to right");
    test.todo("check if models not being selected by search are being hidden");
    test.todo("check default model group name is rendered when props.modelGroupId is provided");
    test.todo("check default models on the right are rendered when props.modelGroupId is provided");
    test.todo("check if onClosing the modal resets all model groups on the right and checked");
});
